# RAG

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  RAG流程图.md  README.md  indexer.py  pyproject.toml  requirements.txt  流程.txt  流程核对报告.md  项目改进分析报告.md
.claude/: settings.local.json
.github/workflows/: test.yml
app/: __init__.py  cli.py  ui.py
assets/: sha2rootca-ca_subca1.cer  terminology.json
corpora/WuLingChaShi/: corpus.json  graph_rules.json  terminology.json
corpora/YaoYuanDeJiuShiZhu/: corpus.json  graph_rules.json
data/: graph_triples_cache_graph_db.json
data/bm25/: _DONE.json  corpus.mmindex.json  indices.csc.index.npy  indptr.csc.index.npy  vocab.index.json
data/chunks/: _DONE.json  chunks.json
data/graph_db/: _DONE.json
docs/: architecture.md  models.md  operations.md
eval/: README.md
rag/: __init__.py  config.py  corpus.py  logging_utils.py  metering.py  prompts.py
scripts/: build_full_graph.py  eval_answer.py  eval_common.py  eval_retrieval.py  test_public_llm.py  visualize_graph.py
tests/: conftest.py  test_cache.py  test_canonicalizer.py  test_concurrency.py  test_config_env.py  test_corpus.py  test_embedding_checkpoint.py  test_eval_common.py  test_files.py  test_graph_constructor.py  test_graph_retriever.py  test_hybrid_retriever.py  test_json_parse.py  test_llm_stream.py  test_metadata_exclusion.py  test_metering.py  test_preprocessor.py  test_prompts.py  test_query_decomposer.py  test_query_engine.py  test_query_rewriter.py  test_reranker.py  test_staged_indexer.py  test_structure_detector.py  test_summary_tree.py  test_validator.py
(+92 files in other folders)
